fix(productCard): overlapping issue

--- a/src/components/Products/ProductCard/ProductCard.scss
+++ b/src/components/Products/ProductCard/ProductCard.scss
@@ -140,7 +140,6 @@
 
   &__details-value {
     width: 135px;
-    line-height: 16px;
 
     @include onMobile {
       width: auto;
